Entries page and changes to the home page, responsive adjustments

--- a/app/assets/stylesheets/utilities.css.scss
+++ b/app/assets/stylesheets/utilities.css.scss
@@ -33,6 +33,11 @@
 .red {
   color: red;
 }
+
+.margin-30-top-bottom {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
 /*
 .js-draft-receiver::-webkit-scrollbar {
     width: 8px;
