--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -2,29 +2,29 @@
   <div class="col-md-5 heading border-bottom">My Entries</div>
   <div class="col-md-7 clearfix mp-right-reset">
     <div class="row game-filters tabs-layout">
-      <div class="col-md-1 placeholder">&nbsp;</div>
-      <div class="col-md-3 border-right-none active">
+      <div class="col-md-1 placeholder hidden-xs hidden-sm">&nbsp;</div>
+      <div class="col-md-3 border-right-none active live">
         <span>Live</span>
         <span class="numbers">10</span>
       </div>
-      <div class="col-md-4 border-right-none">
+      <div class="col-md-4 border-right-none upcoming">
         <span>Upcoming</span>
         <span class="numbers">15</span>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 completed">
         <span>Completed</span>
         <span class="numbers">1205</span>
       </div>
     </div>
-    <div class="border-added">&nbsp;</div>
+    <div class="border-added hidden-xs hidden-sm">&nbsp;</div>
   </div>
   <!-- <div class="col-md-1 border-bottom padding-none">&nbsp;</div> -->
 </div>
 <div class="row fantasy-subheader">
-  <div class="col-md-6 text-left">
+  <div class="col-xs-6 text-left">
     <h5>Live contests</h5>
   </div>
-  <div class="col-md-6 text-right">
+  <div class="col-xs-6 text-right">
     <a class="fc-btn-green">Enter more games</a>
   </div>
 </div>
