adding the star bg and text in the entries page

--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -21,13 +21,21 @@
   <!-- <div class="col-md-1 border-bottom padding-none">&nbsp;</div> -->
 </div>
 <div class="row fantasy-subheader">
-  <div class="col-xs-6 text-left">
+  <div class="col-xs-4 text-left">
     <h5>Live contests</h5>
   </div>
-  <div class="col-xs-6 text-right">
+  <div class="col-xs-8 text-right">
     <a class="fc-btn-green">Enter more games</a>
   </div>
 </div>
+<div id="entries-section" class="row">
+  <div id="entries-empty" class="col-md-12">
+    <h2>You have no live contest right now.</h2>
+    <h3>Live contest will appear here once the games start.</h3>
+  </div>
+  <div id="entries-list" class="hide"></div>
+</div>
+
 <!--
 <div>
 
