--- a/app/assets/stylesheets/entries.css.scss
+++ b/app/assets/stylesheets/entries.css.scss
@@ -321,3 +321,32 @@ a#clear-lineups{
 #filter_player option {
   font-family: Courier, monospace;
 }
+
+
+#entries-section {
+  min-height: 600px;
+}
+#entries-empty {
+    background: url("/assets/white-star.jpg") no-repeat center center;
+    width: 100%;
+    height: 400px;
+}
+@media (max-width: 991px) {
+  #entries-empty {
+    height: 400px;
+  }
+}
+#entries-empty h2 {
+  padding-top: 330px;
+}
+@media (max-width: 991px) {
+  #entries-empty h2 {
+     padding-top: 330px;
+  }
+}
+#entries-empty h2, h3 {
+    text-align: center;
+    font-family: "oswald-regular";
+    text-transform: uppercase;
+    color: #c6c6c6;
+}
