--- a/app/views/admin/contests.html.erb
+++ b/app/views/admin/contests.html.erb
@@ -19,6 +19,7 @@
       <thead>
       <tr>
         <th>ID</th>
+        <th>Sport</th>
         <th>Contest Date</th>
         <th>Contest Type</th>
         <th>Entry Fee</th>
@@ -33,9 +34,10 @@
           <tr>
             <td><%= contest.id %></td>
             <td><%= contest.contestdate %></td>
+            <td><%= contest.sport %></td>
             <td><%= contest.contest_type %></td>
             <td><%= contest.entry_fee %></td>
-            <td><%= contest.prize %></td>
+            <td><%= contest.prizepool %></td>
             <td><%= contest.entries_count %></td>
             <td>
             <% contest.winnings.each do |win| %>
