--- a/app/views/contests/browse.html.erb
+++ b/app/views/contests/browse.html.erb
@@ -95,7 +95,7 @@
     <div class="row game-filters">
       <div class="col-md-4 border-right-none active public">Public</div>
       <div class="col-md-4 border-right-none private">Private</div>
-      <div class="col-md-4 cornell">
+      <div class="col-md-4 cornell">&nbsp;
         <!--
         <img src="<%= image_path("cornell-university-logo.jpg") %>">
         -->
