--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -20,7 +20,7 @@
   </div>
   <!-- <div class="col-md-1 border-bottom padding-none">&nbsp;</div> -->
 </div>
-<div class="row fantasy-subheader">
+<div class="row fantasy-subheader hide">
   <div class="col-xs-4 text-left">
     <h5>Live contests</h5>
   </div>
@@ -28,12 +28,54 @@
     <a class="fc-btn-green">Enter more games</a>
   </div>
 </div>
+<div class="row fantasy-subheader-black">
+  <div class="col-md-3 subheader">
+    <div class="padding">
+      <h3>Scoreboard</h3>
+      <p>Your games: <span class="date">April 30, 2014</span></p>
+    </div>
+  </div>
+  <div class="col-md-3">
+    <h3>4</h3> 
+    <p>entries</p>
+  </div>
+  <div class="col-md-3">
+    <h3>$200 </h4>
+    <p>in play</p>
+  </div>
+  <div class="col-md-3">
+    <h3 class="green">$360</h3>
+    <p class="green">currently winning</p>
+  </div>
+</div>
 <div id="entries-section" class="row">
-  <div id="entries-empty" class="col-md-12">
+  <div id="entries-empty" class="col-md-12 hide">
     <h2>You have no live contest right now.</h2>
     <h3>Live contest will appear here once the games start.</h3>
   </div>
-  <div id="entries-list" class="hide"></div>
+  <div id="entries-list">
+    <div id="home-filter-games">
+      <div class="expand">+ Filter Games</div>
+      <div class="row hide">
+        <!-- -->
+      </div>
+    </div>
+    <table class='contestHead main-grid table filter-result'>
+      <thead>
+      <tr>
+        <th>ID</th>
+        <th>DATE <span class="light-gray">(?)</span></th>
+        <th>CONTEST</th>
+        <th>SCORE</th>
+        <th>ENTRY FEE</th>
+        <th>WINNINGS</th>
+      </tr>
+      </thead>
+      <tbody>
+        <!-- -->
+      </tbody>
+    </table>
+  </div>
 </div>
 
 <!--
