entries page table

--- a/app/assets/stylesheets/entries.css.scss
+++ b/app/assets/stylesheets/entries.css.scss
@@ -406,4 +406,14 @@ a#clear-lineups{
   color: #0FEA6C;
   text-align: center;
 }
-
+.fantasy-table {
+  font-family: "oswald-regular";
+  font-weight: bold;
+  font-size: 16px;
+}
+.fantasy-table tbody {
+  color: #505E6C;
+  font-family: Arial;
+  font-size: 18px;
+  font-weight: normal;
+}
