--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -60,19 +60,73 @@
         <!-- -->
       </div>
     </div>
-    <table class='contestHead main-grid table filter-result'>
+    <table class='contestHead main-grid table filter-result fantasy-table'>
       <thead>
-      <tr>
-        <th>ID</th>
-        <th>DATE <span class="light-gray">(?)</span></th>
-        <th>CONTEST</th>
-        <th>SCORE</th>
-        <th>ENTRY FEE</th>
-        <th>WINNINGS</th>
-      </tr>
+        <tr>
+          <th>ID</th>
+          <th>DATE <span class="light-gray">(?)</span></th>
+          <th>CONTEST</th>
+          <th>SCORE</th>
+          <th>ENTRY FEE</th>
+          <th>WINNINGS</th>
+          <th></th>
+        </tr>
       </thead>
+      <!-- nba sign shouldn't be bold, there should be no image -->
       <tbody>
         <!-- -->
+        <tr>
+          <td>103</td>
+          <td>5/1/14</td>
+          <td>NBA 50/50</td>
+          <td>150 (2/10)</td>
+          <td>$1</td>
+          <td>$1.90</td>
+          <td>
+            <a href="#" class="fc-btn fc-btn-light-green fc-btn-wide">
+              View<i class="glyphicon glyphicon-chevron-right"></i>
+            </a>
+          </td>
+        </tr>
+        <tr>
+          <td>103</td>
+          <td>5/1/14</td>
+          <td>NBA 50/50</td>
+          <td>150 (2/10)</td>
+          <td>$1</td>
+          <td>$1.90</td>
+          <td>
+            <a href="#" class="fc-btn fc-btn-light-green fc-btn-wide">
+              View<i class="glyphicon glyphicon-chevron-right"></i>
+            </a>
+          </td>
+        </tr>
+        <tr>
+          <td>103</td>
+          <td>5/1/14</td>
+          <td>NBA 50/50</td>
+          <td>150 (2/10)</td>
+          <td>$1</td>
+          <td>$1.90</td>
+          <td>
+            <a href="#" class="fc-btn fc-btn-light-green fc-btn-wide">
+              View<i class="glyphicon glyphicon-chevron-right"></i>
+            </a>
+          </td>
+        </tr>
+        <tr>
+          <td>103</td>
+          <td>5/1/14</td>
+          <td>NBA 50/50</td>
+          <td>150 (2/10)</td>
+          <td>$1</td>
+          <td>$1.90</td>
+          <td>
+            <a href="#" class="fc-btn fc-btn-light-green fc-btn-wide">
+              View<i class="glyphicon glyphicon-chevron-right"></i>
+            </a>
+          </td>
+        </tr>
       </tbody>
     </table>
   </div>
