--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -82,11 +82,7 @@
           <td>150 (2/10)</td>
           <td>$1</td>
           <td>$1.90</td>
-          <td>
-            <a href="#" class="fc-btn fc-btn-light-green fc-btn-wide">
-              View<i class="glyphicon glyphicon-chevron-right"></i>
-            </a>
-          </td>
+          <td><a href="#">View</a></td>
         </tr>
         <tr>
           <td>103</td>
@@ -95,11 +91,7 @@
           <td>150 (2/10)</td>
           <td>$1</td>
           <td>$1.90</td>
-          <td>
-            <a href="#" class="fc-btn fc-btn-light-green fc-btn-wide">
-              View<i class="glyphicon glyphicon-chevron-right"></i>
-            </a>
-          </td>
+          <td><a href="#">View</a></td>
         </tr>
         <tr>
           <td>103</td>
@@ -108,11 +100,7 @@
           <td>150 (2/10)</td>
           <td>$1</td>
           <td>$1.90</td>
-          <td>
-            <a href="#" class="fc-btn fc-btn-light-green fc-btn-wide">
-              View<i class="glyphicon glyphicon-chevron-right"></i>
-            </a>
-          </td>
+          <td><a href="#">View</a></td>
         </tr>
         <tr>
           <td>103</td>
@@ -121,11 +109,7 @@
           <td>150 (2/10)</td>
           <td>$1</td>
           <td>$1.90</td>
-          <td>
-            <a href="#" class="fc-btn fc-btn-light-green fc-btn-wide">
-              View<i class="glyphicon glyphicon-chevron-right"></i>
-            </a>
-          </td>
+          <td><a href="#">View</a></td>
         </tr>
       </tbody>
     </table>
