--- a/app/views/contests/browse.html.erb
+++ b/app/views/contests/browse.html.erb
@@ -104,7 +104,7 @@
   </div>
   <!-- <div class="col-md-1 border-bottom padding-none">&nbsp;</div> -->
 </div>
-<div id="home-game-filters">
+<div id="home-game-filters" class="table-filters-view">
   <div id="home-filter-games">
     <div class="row expand">
       <div class="col-md-6 text-left"><span class="sign">-<span> Filter Games</div>
@@ -186,7 +186,7 @@
   */
 
   $(document).on("page:load ready", function () {
-    var homeFiltersView = new Main.Views.HomeFiltersView();
+    var tableFiltersView = new Main.Views.TableFiltersView();
   });
 
 </script>
