--- a/app/assets/javascripts/backbone/templates/live-contests-template.html
+++ b/app/assets/javascripts/backbone/templates/live-contests-template.html
@@ -1,6 +1,6 @@
 <script type="text/template" id="live-contests-template">
   <% if (liveContests.length > 0) { %>
-    <table class='contestHead table sortable'>
+    <table class='contestHead main-grid table filter-result sortable fantasy-table'>
       <thead>
       <tr>
         <th data-defaultsort="asc" class="srt-contest-name">ID</th>
