--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,120 +1,3 @@
-<div id="entries-contest-types" class="row fantasy-tabs">
-  <div class="col-md-5 heading border-bottom">My Entries</div>
-  <div class="col-md-7 clearfix mp-right-reset">
-    <div class="row game-filters tabs-layout">
-      <div class="col-md-1 placeholder hidden-xs hidden-sm">&nbsp;</div>
-      <div class="col-md-3 border-right-none active live">
-        <span>Live</span>
-        <span class="numbers">10</span>
-      </div>
-      <div class="col-md-4 border-right-none upcoming">
-        <span>Upcoming</span>
-        <span class="numbers">15</span>
-      </div>
-      <div class="col-md-4 completed">
-        <span>Completed</span>
-        <span class="numbers">1205</span>
-      </div>
-    </div>
-    <div class="border-added hidden-xs hidden-sm">&nbsp;</div>
-  </div>
-  <!-- <div class="col-md-1 border-bottom padding-none">&nbsp;</div> -->
-</div>
-<div class="row fantasy-subheader hide">
-  <div class="col-xs-4 text-left">
-    <h5>Live contests</h5>
-  </div>
-  <div class="col-xs-8 text-right">
-    <a class="fc-btn-green">Enter more games</a>
-  </div>
-</div>
-<div class="row fantasy-subheader-black">
-  <div class="col-md-3 subheader">
-    <div class="padding">
-      <h3>Scoreboard</h3>
-      <p>Your games: <span class="date">April 30, 2014</span></p>
-    </div>
-  </div>
-  <div class="col-md-3">
-    <h3>4</h3> 
-    <p>entries</p>
-  </div>
-  <div class="col-md-3">
-    <h3>$200 </h4>
-    <p>in play</p>
-  </div>
-  <div class="col-md-3">
-    <h3 class="green">$360</h3>
-    <p class="green">currently winning</p>
-  </div>
-</div>
-<div id="entries-section" class="row">
-  <div id="entries-empty" class="col-md-12 hide">
-    <h2>You have no live contest right now.</h2>
-    <h3>Live contest will appear here once the games start.</h3>
-  </div>
-  <div id="entries-list">
-    <div id="home-filter-games">
-      <div class="expand">+ Filter Games</div>
-      <div class="row hide">
-        <!-- -->
-      </div>
-    </div>
-    <table class='contestHead main-grid table filter-result fantasy-table'>
-      <thead>
-        <tr>
-          <th>ID</th>
-          <th>DATE <span class="light-gray">(?)</span></th>
-          <th>CONTEST</th>
-          <th>SCORE</th>
-          <th>ENTRY FEE</th>
-          <th>WINNINGS</th>
-          <th></th>
-        </tr>
-      </thead>
-      <!-- nba sign shouldn't be bold, there should be no image -->
-      <tbody>
-        <!-- -->
-        <tr>
-          <td>103</td>
-          <td>5/1/14</td>
-          <td>NBA 50/50</td>
-          <td>150 (2/10)</td>
-          <td>$1</td>
-          <td>$1.90</td>
-          <td><a href="#">View</a></td>
-        </tr>
-        <tr>
-          <td>103</td>
-          <td>5/1/14</td>
-          <td>NBA 50/50</td>
-          <td>150 (2/10)</td>
-          <td>$1</td>
-          <td>$1.90</td>
-          <td><a href="#">View</a></td>
-        </tr>
-        <tr>
-          <td>103</td>
-          <td>5/1/14</td>
-          <td>NBA 50/50</td>
-          <td>150 (2/10)</td>
-          <td>$1</td>
-          <td>$1.90</td>
-          <td><a href="#">View</a></td>
-        </tr>
-        <tr>
-          <td>103</td>
-          <td>5/1/14</td>
-          <td>NBA 50/50</td>
-          <td>150 (2/10)</td>
-          <td>$1</td>
-          <td>$1.90</td>
-          <td><a href="#">View</a></td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
 
 <!--
 <div>
@@ -185,18 +68,17 @@
 
 </div>
 -->
-<!--
+<% content_for :banner do %>
 <script>
 
   jQuery(document).on("ready page:load", function ($) {
 
     var data = <%= @data.to_json.html_safe %>;
-    
     /*
     data = {
       "liveContests": [
         {
-          "id": 52,
+          "id": 22,
           "sport": "NBA",
           "start_at": "2003-03-17T20:44:04.984Z",
           "end_at": "2004-03-17T20:44:04.984Z",
@@ -236,23 +118,47 @@
           "place": 814,
           "won": "$0",
           "results_path": "/entries/1"
+        },
+        {
+          "id": 56,
+          "sport": "NBA",
+          "complete": "2014-03-16 03:00:00",
+          "entry_fee": "$1.0",
+          "prize": "$2.5",
+          "place": 8114,
+          "won": "$0",
+          "results_path": "/entries/1"
+        },
+        {
+          "id": 5521,
+          "sport": "NBA",
+          "complete": "2014-03-16 05:00:00",
+          "entry_fee": "$1.0",
+          "prize": "$6.5",
+          "place": 86124,
+          "won": "$0",
+          "results_path": "/entries/1"
         }
       ]
     };
     */
-
     var liveColl = new Main.Collections.LiveContestsCollection(data.liveContests)
     var upcoColl = new Main.Collections.UpcomingContestsCollection(data.upcomingContests);
     var compColl = new Main.Collections.CompletedContestsCollection(data.completedContests);
 
-    var liveView = new Main.Views.LiveContestsView(liveColl);
-    var upcoView = new Main.Views.UpcomingContestsView(upcoColl);
-    var compView = new Main.Views.CompletedContestsView(compColl);
+    var tabsView = new Main.Views.EntriesTabsView({
+      liveCollection: liveColl, 
+      upcomingCollection: upcoColl, 
+      completedCollection: compColl
+    });
+    
 
   });
 
 </script>
--->
+
+<%= Rails.application.assets.find_asset('backbone/templates/entries-tabs-template.html').to_s.html_safe %>
 <%= Rails.application.assets.find_asset('backbone/templates/live-contests-template.html').to_s.html_safe %>
 <%= Rails.application.assets.find_asset('backbone/templates/upcoming-contests-template.html').to_s.html_safe %>
 <%= Rails.application.assets.find_asset('backbone/templates/completed-contests-template.html').to_s.html_safe %>
+<% end %>
