--- a/app/views/lineups/_draft_team.html.erb
+++ b/app/views/lineups/_draft_team.html.erb
@@ -1,4 +1,4 @@
-<div class='jumbotron team teamDraft'>
+<!-- <div class='jumbotron team teamDraft'>
   <div class='contestlive'>
     <strong> Contest Live In</strong>
     <%= countdown_tag @contest.start_at %>
@@ -30,7 +30,75 @@
   <span class='green'>564/Uni »</span>
 </p>
 
-<div class='welcomeNote'>SELECT THE BEST TEAM WITHOUT EXCEEDING THE SALARY CAP.</div>
+<div class='welcomeNote'>SELECT THE BEST TEAM WITHOUT EXCEEDING THE SALARY CAP.</div> -->
+<div class='row drafting-info-row'>
+  <div class='col-md-3'>
+    <div class='row'>
+      <div class='col-xs-6'>
+        <h3 class='text-right'>NBA</h3>
+      </div>
+      <div class='col-xs-6'>
+        <h6>50/50</h6>
+        <p class="small-margin-top"><strong>12-31-2014</strong></p>
+      </div>
+    </div>
+  </div>
+  <div class='col-md-5'>
+    <div class='row hidden-xs hidden-sm'>
+      <div class='col-xs-2'>
+        <h3>$9</h3>
+      </div>
+      <div class='col-xs-10'>
+        <h6>PRIZE POOL</h6>
+        <p class="small-margin-top">Entry fee: <strong>$1</strong> Entries: <strong>15/100</strong></p>
+      </div>
+    </div>
+    <div class='row hidden-md hidden-lg'>
+      <div class='col-xs-6'>
+        <h3 class='text-right'>$9</h3>
+      </div>
+      <div class='col-xs-6'>
+        <h6>PRIZE POOL</h6>
+        <p class="small-margin-top">Entry fee: <strong>$1</strong> Entries: <strong>15/100</strong></p>
+      </div>
+    </div>
+  </div>
+  <div class='col-md-4'>
+    <div class='row hidden-xs hidden-sm'>
+      <div class='col-xs-4'>
+        <p class='live-border'>LIVE</p>
+      </div>
+      <div class='col-xs-2'>
+        <p class='contest-prefix'>in</p>
+      </div>
+      <div class='col-xs-6'>
+        <h3>4:12:24</h3>
+        <p class='contest-time'>8:40pm EST</p>
+      </div>
+    </div>
+    <div class='row hidden-md hidden-lg'>
+      <div class='col-xs-6'>
+        <h3 class='text-right'>LIVE in</h3>
+      </div>
+      <div class='col-xs-6'>
+        <h3 class='text-left'>4:12:24</h3>
+        <p class='contest-time'>8:40pm EST</p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class='row drafting-header-row'>
+  <div class='col-md-12 text-center'>
+    <h1>DRAFT YOUR TEAM</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,</p>
+    <p> sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua.</p>
+    <p><a href='#'>Full contest rules and prizes &gt;&gt;</a></p>
+  </div>  
+</div>
+
+
+
 <div class='col-md2'>
   <h2>AVAILABLE PLAYERS</h2>
   <ul class='dropdownsport'>
