--- a/app/assets/javascripts/backbone/templates/entry-summary-template.html
+++ b/app/assets/javascripts/backbone/templates/entry-summary-template.html
@@ -3,8 +3,8 @@
         <td class="position"><%= position %></td>
         <td><img alt="User" class="user" src="<%= user_img %>"></td>
         <td><span class="green"><%= entry.get('username') %></span></td>
-        <td><span class="entry-min-remaining"><%= entry.min_left() %></span>
-            <progress class="entry-progress-bar" value="<%= entry.min_left() %>" max="480"></progress>
+        <td><span class="entry-min-remaining"> <%= entry.min_left() %></span>
+            <progress class="entry-progress-bar" value="<%= entry.min_left() %>" max="<%= entry.total_gamelength() %>"></progress>
         </td>
         <td class="fantasypoints"><%= entry.get_total_score() %></td>
         <!--<td>$300K NFL Bomb Entry</td>-->
